Refactor SDG Maven POM to include a Maven Profile to remotely (Jenkins) build and run SDG on JDK/JRE 16.
Refactor SDG Jenkinsfile to include the 'remote-java16' Maven Profile in Java 16 Jenkins CI builds.

Resolves gh-497.