@@ -333,6 +333,32 @@
 				</plugins>
 			</build>
 		</profile>
+		<profile>
+			<id>remote-java16</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<configuration>
+							<argLine>--add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED</argLine>
+							<includes>
+								<include>**/*Tests.java</include>
+								<include>**/*Test.java</include>
+							</includes>
+							<reuseForks>false</reuseForks>
+							<systemProperties>
+								<java.util.logging.config.file>${basedir}/src/test/resources/java-util-logging.properties</java.util.logging.config.file>
+								<javax.net.ssl.keyStore>${basedir}/src/test/resources/trusted.keystore</javax.net.ssl.keyStore>
+								<gemfire.disableShutdownHook>true</gemfire.disableShutdownHook>
+								<logback.log.level>error</logback.log.level>
+								<spring.profiles.active>apache-geode</spring.profiles.active>
+							</systemProperties>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
 	</profiles>
 
 </project>
